# ai-todo

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.md  commitlint.config.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/api/: .dockerignore  .env.example  .env.local.example  .env.production.example  .env.staging.example  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.tls.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260520_0001_create_reminders.py  20260520_0002_create_contacts.py  20260520_0003_users_and_user_id.py  20260520_0004_reminder_soft_delete.py  20260520_0005_create_calendar_events.py  20260520_0006_api_tokens_audit_idempotency.py  20260520_0007_contact_links.py  20260521_0008_create_identities.py  20260526_0009_usernames_contact_handles.py  20260527_0010_api_token_types.py  20260527_0011_reclassify_legacy_wechat_pats.py  20260527_0012_revoke_dev_user_pats.py  20260531_0013_notifications.py  20260531_0014_user_avatar_url.py  20260605_0015_api_token_lifecycle.py  20260623_0017_wechat_notify_requested.py  (+4 more)
apps/api/deploy/: Caddyfile.example  cd-bootstrap.sh  cd-k8s-bootstrap.sh  deploy-from-manifest.sh  prune-container-images.sh  remote-deploy.sh  run-k8s-migration.sh
apps/api/scripts/: build_database_url.py  check_alembic_migrations.py  cleanup_local_tokens.py  dev-up.sh  mint_cli_token.py  repair_orphan_identities.sql  rotate_postgres_password.py  wait_for_db.py  worker_healthcheck.py
apps/api/tests/: conftest.py  test_api_token_types.py  test_auth_phase1.py  test_calendar.py  test_cli_integration.py  test_contact_links.py  test_contacts.py  test_correlation_ids.py  test_cursor.py  test_demo_seed.py  test_errors.py  test_health.py  test_quiet_hours.py  test_reminders.py  test_wechat_auth.py
(+491 files in other folders)
