[project]
name = "ai-todo-api"
version = "0.4.0"
description = "FastAPI backend for ai-todo"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "pypinyin>=0.51.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.6.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_todo_api = ["static/icons/*"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = ["--cov=ai_todo_api", "--cov-report=term-missing"]

[tool.coverage.run]
source = ["src/ai_todo_api"]
omit = [
    "src/ai_todo_api/main.py",
    "src/ai_todo_api/__main__.py",
    "src/ai_todo_api/preview.py",
    "src/ai_todo_api/config.py"
]

[tool.ruff]
line-length = 100
target-version = "py311"
